--- a/index.html
+++ b/index.html
@@ -2,23 +2,78 @@
 <html lang="en">
 
 <!--
-WRITTEN BY: Your name here
-EMAIL: Your email here
+WRITTEN BY: Jose Vigil
+EMAIL: jmvigil1@uci.edu
 -->
 
 <head>
   <meta charset="utf-8">
-  <meta name="author" content="Your name here">
-  <meta name="description" content="description of your page">
-   <!-- you would link to an external stylesheet here! -->
-   <!-- you would also link to Bootstrap here! -->
-  <title>title here</title>
+  <meta name="author" content="Jose Vigil">
+  <meta name="description" content="Welcome to my Portfolio!">
+  <meta name = "viewport" content="width=device-width, initial-scale=1">
+  <link href = "https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/portfoliostylesheet.css">
+  <title>Jose Vigil's Portfolio - Home Page</title>
 </head>
 <body>
-  <p>
-    <a href="http://validator.w3.org/check?uri=referer">
-       W3C validator
-    </a>
-  </p>
+
+  <nav class = "navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Logo</a>
+      <ul id="NavLinks">
+        <li>Home</li>
+        <li>About Me</li>
+        <li>Resume</li>
+        <li>Contact</li>
+      </ul>
+    </div>
+  </nav>
+
+  <!--Begin Header/Beginning of Portoflio (Description and Me)-->
+  <div class="container text-center" id = "HeroSection">
+    <div class="row align-items-start">
+      <div class="col">
+        One
+      </div>
+      <div class="col">
+        <div>
+          <h6>Welcome! I am.</h6>
+          <h3>Jose Manuel Vigil</h3>
+          <h5>UX/UI Desinger</h5>
+        </div>
+          <p>bleh bleh bleh</p>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+
+  <!--Hi-->
+  <div>
+    <aside>Contact Me</aside>
+    <div>
+      <p>BLEH BLEH BLEH</p>
+    </div>
+  </div>
+
+  <!--Project Section -->
+  <div class = "container text-center" id = "ProjectSection">
+    <h2>
+      Projects
+    </h2>
+    <div class = "container text-center">
+      <div class = "row align-items-start">
+        <div class = "col">BetterBelli</div>
+        <div class = "col">Altru AI</div>
+        <div class = "col">Prenostik - My Learning Coach</div>
+      </div>
+    </div>
+  </div>
+
+
+  
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
