--- a/index.html
+++ b/index.html
@@ -17,60 +17,93 @@ EMAIL: jmvigil1@uci.edu
 </head>
 <body>
 
-  <nav class = "navbar">
+
+  <!--Navbar-->
+
+  <nav class = "navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Logo</a>
-      <ul id="NavLinks">
-        <li>Home</li>
-        <li>About Me</li>
-        <li>Resume</li>
-        <li>Contact</li>
-      </ul>
+      <a class="navbar-brand" href="#">Jose Manuel Vigil</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class = "navbar-nav"></ul>
+      </div>
     </div>
   </nav>
 
   <!--Begin Header/Beginning of Portoflio (Description and Me)-->
-  <div class="container text-center" id = "HeroSection">
-    <div class="row align-items-start">
-      <div class="col">
-        One
+
+  <div class = "container text-center">
+    <div class="row">
+      <div class = "col-12 col-lg-4">
+        <img src="Images/UserPlaceHolder.png" alt="User Image Placeholder">
       </div>
-      <div class="col">
-        <div>
-          <h6>Welcome! I am.</h6>
-          <h3>Jose Manuel Vigil</h3>
-          <h5>UX/UI Desinger</h5>
-        </div>
-          <p>bleh bleh bleh</p>
-        </div>
-      </div>
-
-
-    </div>
-  </div>
-
-  <!--Hi-->
-  <div>
-    <aside>Contact Me</aside>
-    <div>
-      <p>BLEH BLEH BLEH</p>
-    </div>
-  </div>
-
-  <!--Project Section -->
-  <div class = "container text-center" id = "ProjectSection">
-    <h2>
-      Projects
-    </h2>
-    <div class = "container text-center">
-      <div class = "row align-items-start">
-        <div class = "col">BetterBelli</div>
-        <div class = "col">Altru AI</div>
-        <div class = "col">Prenostik - My Learning Coach</div>
+      <div class = "col-12 col-lg-8">
+        <h2>Hi, I'm Jose Manuel Vigil</h2>
+        <h4>UI|UX Designer</h4>
       </div>
     </div>
   </div>
 
+  <!--About Me Section-->
+  <div class = "container">
+    <div class="row">
+      <aside class = "col-12 col-lg-4">
+        <h4>Contact Me</h4>
+        <ul>
+          <li>Email: <a href="mailto:josevigil298@gmail.com">josevigil298@gmail.com</a></li>
+          <li>Phone: <a href="tel:3235343764">(323) 534-3764</a></li>
+          <li>LinkedIn: <a href="www.linkedin.com/in/josevigil298">www.linkedin.com/in/josevigil298</a></li>
+          <li>Resume: <a href="Files/Jose Vigil - Professional Resume Downloadable.pdf" target="_blank">My Resume</a></li>
+        </ul>
+      </aside>
+      <div class = "col-12 col-lg-8">
+        <h1>About Me</h1>
+        <p class = "body-text">Hey! I am Jose M. Vigil, a First-Generation university student
+          and soon to be graduate, interested in creating and designing technologies that have meaningful impacts
+          on users. My primary focus is in the area of UX Research, which involves understanding and researching
+          who exactly I am creating technology for. I enjoy conducting user research, user interviews, and usability testing
+          whilst creating the best user-centered technologies. Though I am still refining my skills as a UI designer I still 
+          enjoy taking all the information I gather through these UX methodologies and strategies and creating strong functional 
+          designs that users will enjoy.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!--Project Section-->
+  <div class = "container">
+  <h1>Projects</h1>
+  <div class="row">
+    <div class="row">
+      <div class="col-12 col-lg-4">
+        <a href="https://www.linkedin.com/company/altruaicompany/posts/?feedView=all" target="_blank"> <img src="Images/altruaicompany_logo.jpeg" alt="Altru.AI Company Logo"> </a>
+      </div>
+      <div class="col-12 col-lg-8">
+        <h2>Altru.AI - <h3>Course Project</h3></h2>
+        <p class = "body-text">I collaborated with assigned partners on the development of a new LLM designed to assist students and individuals with college applications and the admissions process.
+          I also focused on the user interface and functionality of Altru AI, specifically the ‘Profile Builder,’ which allowed users to input academic and personal details to help the LLM assist with college admission questionnaires and applications.
+          Additionally, I researched and evaluated APIs to facilitate the collection of relevant academic data and university information.
+        </p>
+      </div>
+    </div>
+    <div class = "row">
+      <div class = "col-12 col-lg-8">
+        <h2>BetterBelli - <h3>Course Project</h3></h2>
+        <p class = "body-text">
+          I designed and created a Prototype application focused on dietary restrictions, allowing users to navigate dining options safely, reducing health risks and providing peace of mind for those with unique dietary restrictions.
+          This involved conducting competitive analysis to pinpoint the positives and negatives of similar applications that would help with our creation and design of BetterBelli.
+          I utilized Figma to create low and high-fidelity prototypes of BetterBelli which were used for usability testing and overall functionality testing.
+        </p>
+      </div>
+      <div class = "col-12 col-lg-4">
+        <img src = "Images/BetterBelli.png" alt = "BetterBelli Project Image">
+      </div>
+    </div>
+
+
+  </div>
 
   
 
